add styles to the css file and added logo's to each page

--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -11,15 +11,17 @@
 
 <body>
     <header>
-
-        <ul>
+<nav>
+    <ul>
             <li>
-                <a href="index.html">home</a>
+                <a href="index.html">&#127968;&nbsp;home</a>
             </li>
             <li>
-                <a href="tweets.html">tweets</a>
+                <a href="tweets.html">&#128389;&nbsp;tweets</a>
             </li>
         </ul>
+</nav>
+        
 
     </header>
 
