--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Simple Html document</title>
     <link href="base.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
@@ -11,8 +12,10 @@
 
 <body class="works_on_smartphone">
     <header>
-
-        <ul>
+        
+        <nav>
+            <span class="logo">&#127968;</span>
+            <ul>
             <li>
                 <a href="index.html">home</a>
             </li>
@@ -20,6 +23,8 @@
                 <a href="tweets.html">tweets</a>
             </li>
         </ul>
+        </nav>
+        
 
     </header>
 
