--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -8,7 +8,7 @@
     <title>Smile S</title>
 </head>
 <body>
-    <header>
+    <header id ="header">
         <nav>
             <img src="./images/logo.png" alt="logo" id="logo">
           
